Fix for #1043 and alignment issue in admin page.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1430,8 +1430,8 @@ input[disabled]{
     border-radius: 4px;
     height: 25px;
     width: 60%;
-    margin-left: 4%;
-    margin-top: 0%;
+    margin-left: 34%;
+    margin-top: -10%;
     line-height: 1.7; 
     border: 1px solid #656565 !important;
 }
